buildscript{
    dependencies{
        classpath 'com.google.cloud.tools:appengine-gradle-plugin:1.3.3'
    }
}


plugins {
    id "io.spring.dependency-management" version "1.0.6.RELEASE"
    id "java"
    id "net.ltgt.apt-eclipse" version "0.21"
    id "net.ltgt.apt-idea" version "0.21"
    id "com.github.johnrengelman.shadow" version "4.0.2"
    id "application"
    id "idea"
}

targetCompatibility = "1.8"
sourceCompatibility = "1.8"


version "0.1"
group "com.objectcomputing"

repositories {
    mavenCentral()
    maven { url "https://jcenter.bintray.com" }
}

dependencyManagement {
    imports {
        mavenBom 'io.micronaut:micronaut-bom:1.1.0'
    }
}

configurations {
    // for dependencies that are needed for development only
    developmentOnly 
}

dependencies {
    annotationProcessor "io.micronaut:micronaut-inject-java"
    annotationProcessor "io.micronaut:micronaut-validation"
    compile "io.micronaut:micronaut-inject"
    compile "io.micronaut:micronaut-validation"
    compile "io.micronaut:micronaut-runtime"
    compile "io.micronaut:micronaut-http-client"
    compile "javax.annotation:javax.annotation-api"
    compile "io.micronaut:micronaut-http-server-netty"
    compile "com.google.api-client:google-api-client:1.23.0"
    compile "com.google.oauth-client:google-oauth-client-jetty:1.23.0"
    compile "com.google.apis:google-api-services-drive:v3-rev110-1.23.0"
    compile "io.micronaut:micronaut-views"
    runtime "org.thymeleaf:thymeleaf:3.0.11.RELEASE"
    runtime "ch.qos.logback:logback-classic:1.2.3"
    runtime "org.fusesource.jansi:jansi:1.18"
    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
    testCompile "org.junit.jupiter:junit-jupiter-api"
    testCompile "io.micronaut.test:micronaut-test-junit5"
    testCompile "org.mockito:mockito-junit-jupiter:2.22.0"
    testRuntime "org.junit.jupiter:junit-jupiter-engine"
}

test.classpath += configurations.developmentOnly

mainClassName = "com.objectcomputing.Application"
// use JUnit 5 platform
test {
    useJUnitPlatform()
}
tasks.withType(JavaCompile){
    options.encoding = "UTF-8"
    options.compilerArgs.add('-parameters')
}

shadowJar {
    mergeServiceFiles()
}

run.classpath += configurations.developmentOnly
run.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote', '-Xdebug',"-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n")


// deploying to gcp with gradlew
//buildscript{
//    dependencies{
//        classpath 'com.google.cloud.tools:appengine-gradle-plugin:1.3.3'
//    }
//}

apply plugin: 'com.google.cloud.tools.appengine'

appengine {
    stage{
        artifact = 'build/libs/google-drive-upload-0.1.jar'
    }
    deploy {
        stopPreviousVersion = true
        promote = true
        project = 'oci-intern-2019'
    }
}